# Entropy

./: .gitignore  GEMINI.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: agent.py  chat.py  files.py  router.py
app/core/: config.py  interfaces.py  templates.py
app/models/: chat.py
app/services/: lm_studio.py  mcp_client.py  storage.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/atoms/: Button.tsx  Card.tsx  Spinner.tsx
frontend/src/hooks/: useAgent.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
mcp-servers/data-refinery/: pyproject.toml
mcp-servers/data-refinery/src/data_refinery/: __init__.py
mcp-servers/data-refinery/src/data_refinery/application/: server.py
mcp-servers/data-refinery/src/data_refinery/docs/: data_cleaning_guide.md
mcp-servers/data-refinery/src/data_refinery/domain/interfaces/: repository.py
mcp-servers/data-refinery/src/data_refinery/domain/models/: cleaning.py  dataset.py  sql.py
mcp-servers/data-refinery/src/data_refinery/infrastructure/: duckdb_client.py  pandas_client.py
mcp-servers/data-refinery/src/test/: cleaning_options.py  test_analysis.py  test_date_normalization.py
mcp-servers/visualizer/: pyproject.toml
test/: test.csv
test/data_sets/: unclean_data.csv
test/temp/: cleaned_84c0b4ff.parquet  result_244fa9fa.parquet  result_3b8979a8.parquet  result_8a8eecd4.parquet  result_8c230de6.parquet  result_90ea1ead.parquet  result_ed1eed11.parquet
(+9 files in other folders)
