[project]
name = "data-refinery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "VN-78", email = "vishwanath.s.god@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.34",
    "duckdb>=1.4.4",
    "fastmcp>=2.14.3",
    "mcp[cli]>=1.25.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pydantic>=2.12.5",
    "s3fs>=0.4.2",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
